# fabric-rust-mod-template

./: README.md  build.gradle  gradle.properties
src/client/java/dev/ultreon/xypercode/mods/: MyModClient.java
src/client/java/dev/ultreon/xypercode/mods/mixin/client/: ExampleClientMixin.java
src/client/resources/: mymod.client.mixins.json
src/main/cpp/: CMakeLists.txt  build.bat  mymod.cpp
src/main/java/dev/ultreon/xypercode/mods/: ModItems.java  MyMod.java
src/main/java/dev/ultreon/xypercode/mods/mixin/: ExampleMixin.java
src/main/resources/: fabric.mod.json  mymod.mixins.json
src/main/rust/: Cargo.toml
src/main/rust/src/: lib.rs
